2003-10-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-callbacks.c: Ditto.
	
2003-10-10  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Support drag and drop with BUTTON2.

2003-09-29  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Fix for a portability issue detected on 
	AIX. See bug report 123191, "G_IO_HUP is not enough to
	detect broken pipe".
	(http://bugzilla.gnome.org/show_bug.cgi?id=123191)
	
2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-support.c:  Add a comment for translators.
	(http://bugzilla.gnome.org/show_bug.cgi?id=120434)
	
2003-09-22  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.[ch]:  Fix for bug report 122704.
	(http://bugzilla.gnome.org/show_bug.cgi?id=122704)
	
2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-search-tool-animation.png:  Small touch up.

2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Fix for bug report 122419.
	(http://bugzilla.gnome.org/show_bug.cgi?id=122419)
	
	* gsearchtool-callbacks.[ch]:  Rename the callback function 
	constraint_menu_toggled_cb to constraint_menu_item_activate_cb.

2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool-callbacks.c:  Apply fix based on patch from
	Hidetoshi Tajima (hidetoshi.tajima@sun.com) for bug report
	122402. (http://bugzilla.gnome.org/show_bug.cgi?id=122402)

2003-08-23  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-search-tool.schemas, gsearchtool.c:  Clean up gconf
	key paths.

2003-08-22  Dennis Cranston <dennis_cranston at yahoo com>

	* gsearchtool.c:  Do not use the locate command for finding
	files in the /tmp directory.
	
	* gsearchtool-support.[ch]:  Added is_path_in_tmp_folder().
	
Thu Aug 21 17:03:22 2003  George Lebl <jirka@5z.com>

	* gsearchtool.[ch]: the 'pixmap' field is not used anymore
	  and was just causing trouble.  Fix the width being too large