@@ -1,3 +1,10 @@
+2003-10-15  Dennis Cranston <dennis_cranston at yahoo com>
+	
+	* gsearchtool.c, gsearchtool-callbacks.c, and 
+	  gsearchtool-support.c:  Various memory leak fixes
+	  for bug report #124656. Patch provided by Kjartan 
+	  Maraas <kmarass at gnome org>.
+	  
 2003-10-10  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gsearchtool-callbacks.c: Ditto.
